--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,16 @@
   "author": "Eusebio Simango",
   "license": "MIT",
   "devDependencies": {
+    "@prisma/client": "^3.13.0",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.31",
+    "@types/nodemailer": "^6.4.4",
     "express": "^4.18.1",
     "prisma": "^3.13.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "nodemailer": "^6.7.5"
   }
 }
